--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>2048: Cupcakes Edition 🧁</h1>
+  <h1> 2048: cupcakes 🧁</h1>
   <div id="game-container">
     <div id="grid-container"></div>
   </div>
   <p>Use your arrow keys to combine the cupcakes! 
-made by hansika 😁</p>
+made by hansika 😁 - play until the rainbow havya cupcake</p>
 <script src="script.js"></script>
 
 </body>
